# llm-w-mlx

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
llm_w_mlx/chat/: __init__.py  mistral.py  teknium.py
llm_w_mlx/cli/: llm.py
llm_w_mlx/model/: __init__.py  model.py
llm_w_mlx/utils/: time.py
nlp/llm-w-mlx/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
nlp/llm-w-mlx/llm_w_mlx/chat/: __init__.py  base.py  llama.py  mistral.py  teknium.py
nlp/llm-w-mlx/llm_w_mlx/cli/: llm.py  personalities.py
nlp/llm-w-mlx/llm_w_mlx/model/: __init__.py  config.py  llm.py  model.py
nlp/llm-w-mlx/llm_w_mlx/utils/: time.py  weights.py
